--- a/src/aspnet-core/src/SPACore.PhoneBook.Core/Localization/SourceFiles/PhoneBook-zh-CN.xml
+++ b/src/aspnet-core/src/SPACore.PhoneBook.Core/Localization/SourceFiles/PhoneBook-zh-CN.xml
@@ -21,6 +21,7 @@
     <text name="PhoneBook" value="电话薄" />
 
     <text name="LoginFailed" value="登录失败!" />
+    <text name="CreateNewPerson" value="创建联系人" />
     
   </texts>
 </localizationDictionary>
